# sd-socle-europe

./: .gitignore  CMakeLists.txt  CMakeLists_cgal.txt  Dockerfile  Dockerfile.test  Geometry.cpp  Geometry.h  GeosIO.cpp  README.md  build-docker-image-test.sh  build-docker-image.sh  build-unix-europe-test.sh  build-unix-europe.sh
